# chatgpt-export

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  chatgpt_export_presets.example.json  parse_chatgpt_archive.py  pyproject.toml
.github/workflows/: ci.yml
src/chatgpt_export/: __init__.py  cli.py  core.py
tests/: test_core.py
