[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-export"
version = "0.1.0"
description = "Extract conversations from a ChatGPT export archive"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aghatpande" }]
urls = { Homepage = "https://github.com/aghatpande/chatgpt-export", Repository = "https://github.com/aghatpande/chatgpt-export", Issues = "https://github.com/aghatpande/chatgpt-export/issues" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.scripts]
chatgpt-export = "chatgpt_export.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
